# steam-discord-bridge-bot

./: Cargo.toml  README.md  Secrets.toml.example  schema.sql
src/: common_games.rs  db.rs  main.rs  steam.rs  user.rs
src/commands/: get_common_games.rs  help.rs  mod.rs  register.rs  show.rs
