[package]
name = "steam-library-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
shuttle-serenity = "0.21.0"
shuttle-runtime = "0.21.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "native_tls_backend",
    "model",
    "voice",
    "cache",
] }
shuttle-secrets = "0.21.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.18", default-features = false, features = [
    "serde_json",
] }
serde = { version = "1.0.171", features = ["derive"] }
monostate = "0.1"
shuttle-aws-rds = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
futures = "0.3.28"

[dev-dependencies]
serde_json = "1"
