[package]
name = "steam-discord-bridge-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", default-features = false, features = [
    "serde_json",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "native_tls_backend",
    "model",
    "cache",
] }
shuttle-persist = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-secrets = "0.21.0"
shuttle-serenity = "0.21.0"
tokio = "1.26.0"
tracing = "0.1.37"
